add login and register api
